--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,1 @@
-MONGO_URL = mongodb+srv://noumanejazghost:asdf456nouM$@cluster0.ouswe6m.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URL = mongodb+srv://noumanejazghost:asdf456nouM$@cluster0.ntg3hbo.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
